# aidshield-zk-stellar

./: .gitignore  LICENSE  README.md  SPEC.md  package-lock.json  package.json
backend/: exportProof.js  generateProof.js  merkleTree.js  prepareInputs.js
circuits/aidshield/: Nargo.toml  Prover.toml
circuits/aidshield/src/: main.nr
contracts/aidshield_contract/: Cargo.toml
contracts/aidshield_contract/src/: lib.rs
contracts/aidshield_verifier/: Cargo.toml
contracts/aidshield_verifier/src/: lib.rs
docs/: architecture.md  noir-circuit-audit.md  zk-verifier-integration.md
frontend/: README.md  next.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/claim/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/verify/: page.tsx
frontend/src/components/: site-nav.tsx
frontend/src/data/: beneficiaries.ts  claims.ts  deployment.ts
scripts/: build-aidshield-zk-artifacts.sh  deploy-aidshield-verifier.sh  verify-aidshield-proof.sh
