[package]
name = "aidshield_verifier"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { version = "=26.0.1", default-features = false, features = ["alloc"] }
ultrahonk_soroban_verifier = { path = "vendor/ultrahonk-soroban-verifier", default-features = false }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
overflow-checks = true
